--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
       <nav class="links-nav">
         <ul class="links">
-          <li><a href="#hero" class="active">Features</a></li>
+          <li><a href="#" class="active">Features</a></li>
           <li><span>></span></li>
           <li><a href="#team">Team</a></li>
           <li><span>></span></li>
@@ -34,14 +34,14 @@
       </nav>
     </div>
     <!-- Start hero  -->
-    <section id="hero">
+    <section>
       <div class="hero">
         <div class="hero-content">
           <h1>All your files in one secure location, accessible anywhere.</h1>
           <p> Fylo stores your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends,
             family, and co-workers.</p>
-          <form action="/action_page.php" class="start"">
+          <form action="/action_page.php" class="start">
             <div class="wrapper">
               <input type="email" class="email" name="email" placeholder="Enter your email...">
               <input type="submit" value="Get Started">
@@ -86,7 +86,7 @@
                     <img src="images/avatar-testimonial.jpg" alt="head shot">
                   </div>
                   <div class="title">
-                    <h3>Kyle Burton</h3>
+                    <h4>Kyle Burton</h4>
                     <p>Founder & CEO, Huddle</p>
                   </div>
                 </div>
@@ -157,20 +157,20 @@
           </div>
         </div>
         <ul class="col-st">
-          <li><a href=""> About Us</a></li>
-          <li><a href="">Jobs</a></li>
-          <li><a href="">Press</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="#"> About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
         </ul>
         <ul class="col-nd">
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Terms</a></li>
-          <li><a href="">Privacy</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
         </ul>
         <ul class="social-icon">
-          <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-          <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-          <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
