--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
     </div>
     <!-- Start hero  -->
-    <section>
+    <div>
       <div class="hero">
         <div class="hero-content">
           <h1>All your files in one secure location, accessible anywhere.</h1>
@@ -52,7 +52,7 @@
           <img class="hero-image" src="images/illustration-1.svg" alt="illustration">
         </div>
       </div>
-    </section>
+    </div>
   </div>
   <!-- End hero  -->
 
@@ -86,7 +86,7 @@
                     <img src="images/avatar-testimonial.jpg" alt="head shot">
                   </div>
                   <div class="title">
-                    <h4>Kyle Burton</h4>
+                    <h2>Kyle Burton</h2>
                     <p>Founder & CEO, Huddle</p>
                   </div>
                 </div>
